--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-orden-del-dia/tabla-orden-del-dia.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-orden-del-dia/tabla-orden-del-dia.component.html
@@ -30,7 +30,7 @@
             <td mat-cell *matCellDef="let element">
                 <button mat-raised-button color="accent"
                     class="btn-table"
-                    (click)="onEdit(element.id)"
+                    (click)="onEdit(element.id, element.fechaComiteNoFormat,false)"
                     *ngIf="estadosComite.sinConvocatoria == element.estadoComiteCodigo">
                     Ver detalle/ <br> Editar
                 </button>
@@ -52,7 +52,7 @@
 
                 <button mat-raised-button
                     color="accent"
-                    (click)="onEdit(element.id)"
+                    (click)="onEdit(element.id, '', true)"
                     *ngIf="estadosComite.sinConvocatoria != element.estadoComiteCodigo"
                     class="btn-table">
                     Ver detalle
