--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-solicitudes-contractuales/tabla-solicitudes-contractuales.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-solicitudes-contractuales/tabla-solicitudes-contractuales.component.html
@@ -1,21 +1,29 @@
 <div class="table-responsive">
     <table mat-table [dataSource]="dataSource" matSort class="tabla">
-    
+
         <ng-container matColumnDef="fechaSolicitud">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de la solicitud </th>
-            <td mat-cell *matCellDef="let element"> <b>{{ element.fechaSolicitud | date: 'dd/MM/yyyy' }}</b> </td>
+            <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.fechaSolicitud | date: 'dd/MM/yyyy' }}</b> </td>
         </ng-container>
-    
+
         <ng-container matColumnDef="numeroSolicitud">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de la solicitud </th>
-            <td mat-cell *matCellDef="let element"> {{ element.numeroSolicitud }} </td>
+            <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroSolicitud }} </td>
         </ng-container>
-    
+
         <ng-container matColumnDef="tipoSolicitud">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Tipo de solicitud </th>
-            <td mat-cell *matCellDef="let element"> {{ element.tipoSolicitud }} </td>
+            <td mat-cell *matCellDef="let element" align="center"> {{ element.tipoSolicitud }} </td>
         </ng-container>
-    
+
+        <!-- Seleccionar Column -->
+        <ng-container matColumnDef="seleccionar">
+          <th mat-header-cell *matHeaderCellDef> Seleccionar </th>
+          <td mat-cell *matCellDef="let element" align="center">
+            <mat-checkbox class="example-margin" [value]="element.seleccionado" [checked]="element.seleccionado" (change)="getSesionSeleccionada( $event.checked, element )" color="primary"></mat-checkbox>
+          </td>
+        </ng-container>
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
