--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-proyecto/form-proyecto.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-proyecto/form-proyecto.component.html
@@ -65,7 +65,7 @@
                         <mat-expansion-panel
                             class="expansion-style sub-expansion-black"
                             *ngIf="
-                                !ocultarAcordeonAmortizacionAnticipo &&
+                                ocultarAcordeonAmortizacionAnticipo ||
                                 fase.get('codigo').value === fasesContrato.construccion &&
                                 manejoAnticipoRequiere === true &&
                                 fase.get('tieneAnticipo').value === false &&
